Fixed the x overflow

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+body, html {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 .common-flex {
   display: flex;
   justify-content: center;
